Add New recipe and condition